wip: add new qrcode project

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,9 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
+permissions_path = '../node_modules/react-native-permissions/ios'
+pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
+
 target 'qrcode' do
   config = use_native_modules!
 
