--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "android:expo": "expo start --android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
@@ -11,7 +12,10 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-camera": "^4.2.1",
+    "react-native-permissions": "^4.1.5",
+    "react-native-qrcode-scanner": "^1.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
